--- a/GlucoMan.Mobile/GlucoMan.Mobile/MealPage.xaml
+++ b/GlucoMan.Mobile/GlucoMan.Mobile/MealPage.xaml
@@ -7,7 +7,13 @@
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="20"/>
+                <RowDefinition Height="20"/>
                 <RowDefinition Height="50"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="20"/>
                 <RowDefinition Height="50"/>
                 <RowDefinition Height="50"/>
                 <RowDefinition Height="20"/>
@@ -18,41 +24,74 @@
                 <ColumnDefinition />
                 <ColumnDefinition />
                 <ColumnDefinition />
+                <ColumnDefinition />
             </Grid.ColumnDefinitions>
-            <Label Grid.Row="0" Grid.Column="0" Text="IdMeal" XAlign="Center" YAlign="End"/>
-            <Label Grid.Row="0" Grid.Column="1" Text="Type of Meal" XAlign="Center" YAlign="End"/>
-            <Label Grid.Row="0" Grid.Column="2" Text="Accuracy" Grid.ColumnSpan="2" XAlign="Center" YAlign="End"/>
-            <Label Grid.Row="0" Grid.Column="3" Text="" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="0" Grid.Column="0" TextColor="Black" 
+                   Grid.ColumnSpan="5" Text="Meal data" XAlign="Center" YAlign="End"/>
+            
+            <Label Grid.Row="1" Grid.Column="0" Text="IdMeal" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="1" Grid.Column="1" Text="Meal CHO" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="1" Grid.Column="2" Text="Accuracy" Grid.ColumnSpan="2" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="1" Grid.Column="3" Text="" XAlign="Center" YAlign="End"/>
 
-            <Entry Grid.Row="1" Grid.Column="0" x:Name="txtIdMeal" BackgroundColor="White" 
+            <Entry Grid.Row="2" Grid.Column="0" x:Name="txtIdMeal" BackgroundColor="White" 
                    FontSize="Medium" HorizontalTextAlignment="Center" IsReadOnly="true"/>
-            <Picker Grid.Row="1" Grid.Column="1" x:Name="cmbTypeOfMeal"  
-                    Title="Type of Meal" 
-                    ItemsSource="{Binding Common.TypeOfMeal}" 
-                    SelectedItem="{Binding Snack, Mode=TwoWay}"
-                    BackgroundColor="PaleGoldenrod"
-                    FontSize="Small" />
-            <Entry Grid.Row="1" Grid.Column="2" x:Name="txtAccuracyOfChoMeal" 
-                   BackgroundColor="PaleGoldenrod" FontSize="Medium" />
-            <Picker Grid.Row="1" Grid.Column="3" x:Name="cmbAccuracyMeal"
+            <Entry Grid.Row="2" Grid.Column="1" x:Name="txtChoOfMeal" BackgroundColor="Aqua"
+                   Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>
+            <Entry Grid.Row="2" Grid.Column="2" x:Name="txtAccuracyOfChoMeal" 
+                   Keyboard="Numeric" HorizontalTextAlignment="End" BackgroundColor="PaleGoldenrod" FontSize="Medium" />
+            <Picker Grid.Row="2" Grid.Column="3" x:Name="cmbAccuracyMeal"
                     Title="Accuracy" HorizontalTextAlignment="End"
                     ItemsSource="{Binding Common.QualitativeAccuracy}" 
                     SelectedItem="{Binding NotSet, Mode=TwoWay}"
                     BackgroundColor="PaleGoldenrod" FontSize="Small"/>
-            <Label Grid.Row="2" Grid.Column="0" Text="Meal CHO" XAlign="Center" YAlign="End"/>
-            <Label Grid.Row="2" Grid.Column="1" Text="Meal Start" XAlign="Center" YAlign="End"/>
-            <Button Grid.Row="2" Grid.Column="2" Text="Save" x:Name="btnSave" ></Button>
-            <Button Grid.Row="2" Grid.Column="3" Text="This" x:Name="btnShowThisMeal"></Button>
+            <Button Grid.Row="2" Grid.Column="4" Text="Calc" x:Name="btnSumCho"
+                    Clicked="btnSumCho_Click"></Button>
 
-            <Entry Grid.Row="3" Grid.Column="0" x:Name="txtChoOfMeal" BackgroundColor="Aqua"
-                        FontSize="Medium" HorizontalTextAlignment="End"/>
-            <DatePicker Grid.Row="3" Grid.Column="1" x:Name="dtpMealDateStart" 
-                        BackgroundColor="PaleGreen" FontSize="Small" Format="yyyy-MM-dd" 
-                        HorizontalOptions="Center" />
-            <TimePicker Grid.Row="3" Grid.Column="2" x:Name="dtpMealTimeStart" 
-                        BackgroundColor="PaleGreen" FontSize="Small" Format="HH:mm:ss" 
-                        HorizontalOptions="Center" />
-            <Grid Grid.Row="3" Grid.Column="3">
+            <Button Grid.Row="3" Grid.Column="0" Text="Save" x:Name="btnSaveAllMeal" 
+                    Clicked="btnSaveAllMeal_Click"></Button>
+            <Button Grid.Row="3" Grid.Column="3" Text="Insulin" x:Name="btnInsulin" 
+                    IsEnabled="False" Clicked="btnInsulin_Click"></Button>
+            <Button Grid.Row="3" Grid.Column="4" Text="Gluc." x:Name="btnGlucose" 
+                    IsEnabled="False" Clicked="btnGlucose_Click"></Button>
+
+            <Label Grid.Row="4" Grid.Column="0" TextColor="Black" 
+                   Grid.ColumnSpan="5" Text="Food data" XAlign="Center" YAlign="End"/>
+
+            <Label Grid.Row="5" Grid.Column="0" Text="Id M-F" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="5" Grid.Column="1" Text="Id Food" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="5" Grid.Column="2" Text="CHO %" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="5" Grid.Column="3" Text="Quant [g]" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="5" Grid.Column="4" Text="CHO [g]" XAlign="Center" YAlign="End"/>
+
+            <Entry Grid.Row="6" Grid.Column="0" x:Name="txtIdFoodInMeal" BackgroundColor="White" 
+                   FontSize="Medium" HorizontalTextAlignment="Center" IsReadOnly="true"/>
+            <Entry Grid.Row="6" Grid.Column="1" x:Name="txtIdFood" BackgroundColor="White" 
+                   Keyboard="Numeric"
+                   FontSize="Medium" HorizontalTextAlignment="Center" IsReadOnly="true"/>
+            <Entry Grid.Row="6" Grid.Column="2" x:Name="txtFoodChoPercent" BackgroundColor="GreenYellow"
+                   TextChanged="txtFoodChoPercent_TextChanged"
+                   Keyboard="Numeric"
+                   FontSize="Medium" HorizontalTextAlignment="End"/>
+            <Entry Grid.Row="6" Grid.Column="3" x:Name="txtFoodQuantityGrams" BackgroundColor="GreenYellow"
+                   Keyboard="Numeric" TextChanged="txtFoodQuantityGrams_TextChanged" FontSize="Medium" HorizontalTextAlignment="End"/>
+            <Entry Grid.Row="6" Grid.Column="4" x:Name="txtFoodChoGrams" BackgroundColor="LightGreen"
+                   Keyboard="Numeric" TextChanged="txtFoodChoGrams_TextChanged" FontSize="Medium" HorizontalTextAlignment="End"/>
+
+            <Label Grid.Row="7" Grid.Column="0" Text="Name of food" Grid.ColumnSpan="2" 
+                   XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="7" Grid.Column="2" Text="Accuracy" Grid.ColumnSpan="2" XAlign="Center" YAlign="End"/>
+
+            <Entry Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="2" x:Name="txtFoodInMealName" BackgroundColor="LightGreen"
+                   FontSize="Medium" HorizontalTextAlignment="End"/>
+            <Entry Grid.Row="8" Grid.Column="2" x:Name="txtAccuracyOfChoFoodInMeal" 
+                   Keyboard="Numeric" HorizontalTextAlignment="End" BackgroundColor="PaleGoldenrod" FontSize="Medium" />
+            <Picker Grid.Row="8" Grid.Column="3" x:Name="cmbAccuracyFoodInMeal"
+                    Title="Accuracy" HorizontalTextAlignment="End"
+                    ItemsSource="{Binding Common.QualitativeAccuracy}" 
+                    SelectedItem="{Binding NotSet, Mode=TwoWay}"
+                    BackgroundColor="PaleGoldenrod" FontSize="Small"/>
+            <Grid Grid.Row="8" Grid.Column="4">
                 <Grid.RowDefinitions>
                     <RowDefinition />
                 </Grid.RowDefinitions>
@@ -60,14 +99,28 @@
                     <ColumnDefinition />
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
-                <Button Grid.Row="0" Grid.Column="0" Text="+" x:Name="btnAddMeal" ></Button>
-                <Button Grid.Row="0" Grid.Column="1" Text="-" x:Name="btnRemoveMeal" ></Button>
+                <Button Grid.Row="0" Grid.Column="0" Text="+" x:Name="btnAddFood" 
+                        Clicked="btnAddFood_Click"></Button>
+                <Button Grid.Row="0" Grid.Column="1" Text="-" x:Name="btnRemoveFood"
+                        Clicked="btnRemoveFood_Click"></Button>
             </Grid>
 
-            <Label Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Text="Food" XAlign="Center" YAlign="End"/>
-            <Label Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="2" Text="Carbohydrates" XAlign="Center" YAlign="End"/>
-            <ListView Grid.Row="5" Grid.ColumnSpan="4" x:Name="gridMeals" ItemsSource="{Binding}"
-                      ItemSelected="OnSelection" >
+            <Button Grid.Row="9" Grid.Column="0" Text="Save" x:Name="btnSaveAllFoods" 
+                    Clicked="btnSaveAllFoods_Click"></Button>
+            <Button Grid.Row="9" Grid.Column="1" Text="Defaults" x:Name="btnDefaults" 
+                    Clicked="btnDefaults_Click"></Button>
+            <Button Grid.Row="9" Grid.Column="2" Text="Foods" x:Name="btnFoodDetail" 
+                    Clicked="btnFoodDetail_Click"></Button>
+            <Button Grid.Row="9" Grid.Column="3" Text="Search" x:Name="btnSearchFood" 
+                    Clicked="btnSearchFood_Click"></Button>
+            <Button Grid.Row="9" Grid.Column="4" Text="Weigh" x:Name="btnWeighFood" 
+                    Clicked="btnWeighFood_Click"></Button>
+
+            <Label Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="3" Text="Food" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="10" Grid.Column="3" Grid.ColumnSpan="1" Text="CHO" XAlign="Center" YAlign="End"/>
+            
+            <ListView Grid.Row="11" Grid.ColumnSpan="5" x:Name="gridFoodsInMeal" ItemsSource="{Binding}"
+                      ItemSelected="OnGridSelectionAsync" >
                 <!-- description of data to be shown, in a DataTemplate -->
                 <ListView.ItemTemplate>
                     <DataTemplate>
@@ -78,7 +131,7 @@
                                         <RowDefinition Height="18"/>
                                     </Grid.RowDefinitions>
                                     <Label HorizontalTextAlignment="Center" Grid.Column="0" Text="{Binding Name}"/>
-                                    <Label HorizontalTextAlignment="Center" Grid.Column="1" Text="{Binding Carbohydrates.Double}"/>
+                                    <Label HorizontalTextAlignment="Center" Grid.Column="1" Text="{Binding CarbohydratesGrams.Double}"/>
                                 </Grid>
                             </ViewCell.View>
                         </ViewCell>
