--- a/GlucoMan.Mobile/GlucoMan.Mobile/FoodToHitTargetCarbsPage.xaml
+++ b/GlucoMan.Mobile/GlucoMan.Mobile/FoodToHitTargetCarbsPage.xaml
@@ -28,7 +28,7 @@
 
             <Label Grid.Row="1" Grid.Column="0" Text="Target CHO [g]" XAlign="Center" YAlign="End"/>
             <Entry Grid.Row="2" Grid.Column="0" x:Name="TxtTargetCho" Text="" Unfocused="TxtTargetCho_Leave"
-                   Margin="25,0,25,0" Placeholder="[g]" HorizontalTextAlignment ="End" 
+                   Keyboard="Numeric" Margin="25,0,25,0" Placeholder="[g]" HorizontalTextAlignment ="End" 
                    BackgroundColor="PaleGoldenrod" />
             <Button Grid.Row="3" Grid.Column="0" x:Name="btnReadTarget" Text="Read Target" 
                    Margin="10,5,10,5" Clicked="btnReadTarget_Click" />
@@ -36,14 +36,14 @@
             <Label Grid.Row="1" Grid.Column="1" Text="CHO already taken [g]" 
                    XAlign="Center" YAlign="End" />
             <Entry Grid.Row="2" Grid.Column="1" x:Name="TxtChoAlreadyTaken" Text="" Unfocused="TxtChoAlreadyTaken_Leave"
-                   Margin="25,0,25,0" Placeholder="[g]" HorizontalTextAlignment ="End" 
+                   Keyboard="Numeric" Margin="25,0,25,0" Placeholder="[g]" HorizontalTextAlignment ="End" 
                    FontSize="Large" BackgroundColor="PaleGreen" />
             <Button Grid.Row="3" Grid.Column="1" x:Name="btnReadChoTaken" Text="Read taken" 
                    IsEnabled="False" Margin="10,5,10,5" Clicked="btnReadChoTaken_Click" />
 
             <Label Grid.Row="1" Grid.Column="2" Text="CHO food to eat [%]" XAlign="Center" YAlign="End"/>
             <Entry Grid.Row="2" Grid.Column="2" x:Name="TxtChoOfFood" Text="" Unfocused="TxtChoOfFood_Leave"
-                   Margin="25,0,25,0" Placeholder="%" HorizontalTextAlignment ="End" 
+                   Keyboard="Numeric" Margin="25,0,25,0" Placeholder="%" HorizontalTextAlignment ="End" 
                    FontSize="Large" BackgroundColor="PaleGreen" />
             <Button Grid.Row="3" Grid.Column="2" x:Name="btnReadFood" Text="Read Food" 
                    IsEnabled="False" Margin="10,5,10,5" Clicked="btnReadFood_Click" />
@@ -53,12 +53,12 @@
             
             <Label Grid.Row="5" Grid.Column="0" Text="CHO left to take [g]" XAlign="Center" YAlign="End"/>
             <Entry Grid.Row="6" Grid.Column="0" x:Name="TxtChoLeftToTake" Text="" Unfocused="TxtChoOfFood_Leave"
-                   Margin="25,0,25,0" Placeholder="[g]" HorizontalTextAlignment ="End" 
+                   Keyboard="Numeric" Margin="25,0,25,0" Placeholder="[g]" HorizontalTextAlignment ="End" 
                    FontSize="Large" BackgroundColor="White" />
 
             <Label Grid.Row="5" Grid.Column="2" Text="Food to eat to hit target CHO [g]" XAlign="Center" YAlign="End"/>
             <Entry Grid.Row="6" Grid.Column="2" x:Name="TxtFoodToHitTarget" Text="" 
-                   Margin="25,0,25,0" Placeholder="[g]" HorizontalTextAlignment ="End" 
+                   Keyboard="Numeric" Margin="25,0,25,0" Placeholder="[g]" HorizontalTextAlignment ="End" 
                    FontSize="Large" BackgroundColor="SkyBlue" />
         </Grid>
     </ContentPage.Content>
