--- a/GlucoMan.Mobile/GlucoMan.Mobile/MiscellaneousFunctionsPage.xaml
+++ b/GlucoMan.Mobile/GlucoMan.Mobile/MiscellaneousFunctionsPage.xaml
@@ -24,10 +24,10 @@
             <Label Grid.Row="1" Grid.Column="0" Text="mg/dL" XAlign="Center" YAlign="End"/>
             <Label Grid.Row="1" Grid.Column="1" Text="mmol/L" XAlign="Center" YAlign="End"/>
 
-            <Entry  Grid.Row="2" Grid.Column="0" x:Name="txt_mgPerdL" HorizontalTextAlignment ="End" Text="" 
-                   Placeholder="mg/dl" BackgroundColor="GreenYellow" TextChanged="txt_mgPerdL_TextChanged"/>
-            <Entry  Grid.Row="2" Grid.Column="1" x:Name="txt_mmolPerL" HorizontalTextAlignment ="End" Text="" 
-                   Placeholder="mmol/L" BackgroundColor="GreenYellow" TextChanged="txt_mmolPerL_TextChanged"/>
+            <Entry Grid.Row="2" Grid.Column="0" x:Name="txt_mgPerdL" HorizontalTextAlignment ="End" Text="" 
+                   Keyboard="Numeric" Placeholder="mg/dl" BackgroundColor="GreenYellow" TextChanged="txt_mgPerdL_TextChanged"/>
+            <Entry Grid.Row="2" Grid.Column="1" x:Name="txt_mmolPerL" HorizontalTextAlignment ="End" Text="" 
+                   Keyboard="Numeric" Placeholder="mmol/L" BackgroundColor="GreenYellow" TextChanged="txt_mmolPerL_TextChanged"/>
 
             <Button Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" 
                     Text="Reset database" Margin="100,0,100,0"
