--- a/GlucoMan.Mobile/GlucoMan.Mobile/FoodsPage.xaml
+++ b/GlucoMan.Mobile/GlucoMan.Mobile/FoodsPage.xaml
@@ -1,14 +1,124 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="GlucoMan.Mobile.FoodsPage">
+             x:Class="GlucoMan.Mobile.FoodsPage"
+             Title="Foods">
     <ContentPage.Content>
         <Grid>
-            <RadioButton Grid.Row="9" Grid.Column="0" Content="b.fast" x:Name="rdbIsBreakfast" />
-            <RadioButton Grid.Row="9" Grid.Column="1" Content="lunch" x:Name="rdbIsLunch" />
-            <RadioButton Grid.Row="9" Grid.Column="2" Content="dinner" x:Name="rdbIsDinner" />
-            <RadioButton Grid.Row="9" Grid.Column="3" Content="snack" x:Name="rdbIsSnack" />
+            <Grid.RowDefinitions>
+                    <RowDefinition Height="20"/>
+                    <RowDefinition Height="20"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="20"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="20"/>
+                    <RowDefinition Height="20"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="20"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="20"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="20"/>
+                </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
 
+            <Label Grid.Row="0" Grid.Column="0" TextColor="Black" 
+                Grid.ColumnSpan="5" Text="Food's information" 
+                    XAlign="Center" YAlign="End"/>
+
+            <Label Grid.Row="1" Grid.Column="0" Text="Id food" 
+                XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2"  Text="Name of food" 
+                XAlign="Center" YAlign="End"/>
+
+            <Entry Grid.Row="2" Grid.Column="0" x:Name="txtIdFood" BackgroundColor="White" 
+                    FontSize="Medium" HorizontalTextAlignment="Center" 
+                    IsReadOnly="true"/>
+            <Entry Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" 
+                    x:Name="txtName" BackgroundColor="White" 
+                    Keyboard="Text"
+                    FontSize="Medium" HorizontalTextAlignment="Center" 
+                    IsReadOnly="false"/>
+
+            <Label Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="5"  
+                    Text="Description of food" XAlign="Start" YAlign="End"/>
+
+            <Entry Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="5" 
+                    x:Name="txtDescription" BackgroundColor="White"
+                    Keyboard="TExt"
+                    FontSize="Medium" HorizontalTextAlignment="End"/>
+
+            <Label Grid.Row="5" Grid.Column="0" TextColor="Black" 
+                Grid.ColumnSpan="5" Text="Food's nutrition data" 
+                    XAlign="Center" YAlign="End"/>
+
+            <Label Grid.Row="6" Grid.Column="0" Text="Calories [kCal]" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="6" Grid.Column="1" Text="Total fats [g]%" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="6" Grid.Column="2" Text="Saturated fats" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="6" Grid.Column="3" Text="Mono sat. fats" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="6" Grid.Column="4" Text="Poli fats  [g]%" XAlign="Center" YAlign="End"/>
+
+            <Entry Grid.Row="7" Grid.Column="0" x:Name="txtCalories" BackgroundColor="White"
+                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>
+            <Entry Grid.Row="7" Grid.Column="1" x:Name="txtTotalFats" BackgroundColor="White"
+                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>
+            <Entry Grid.Row="7" Grid.Column="2" x:Name="txtSaturatedFats" BackgroundColor="White"
+                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>
+            <Entry Grid.Row="7" Grid.Column="3" x:Name="txtMonoinsaturatedFats" BackgroundColor="White"
+                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>
+            <Entry Grid.Row="7" Grid.Column="4" x:Name="txtPolinsaturatedFats" BackgroundColor="White"
+                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>
+
+            <Label Grid.Row="8" Grid.Column="0" Text="CHO [g]%" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="8" Grid.Column="1" Text="Sugar [g]%" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="8" Grid.Column="2" Text="Fibers [g]%" XAlign="Center" YAlign="End"/>
+
+            <Entry Grid.Row="9" Grid.Column="0" x:Name="txtFoodCarbohydrates" BackgroundColor="GreenYellow"
+                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>
+            <Entry Grid.Row="9" Grid.Column="1" x:Name="txtSugar" BackgroundColor="White"
+                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>
+            <Entry Grid.Row="9" Grid.Column="2" x:Name="txtFibers" BackgroundColor="White"
+                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>
+
+            <Label Grid.Row="10" Grid.Column="0" Text="Proteins [g]%" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="10" Grid.Column="1" Text="Salt [g]%" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="10" Grid.Column="2" Text="Cholesterol [g]%" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="10" Grid.Column="3" Text="Potassium  [g]%" XAlign="Center" YAlign="End"/>
+
+            <Entry Grid.Row="11" Grid.Column="0" x:Name="txtProteins" BackgroundColor="GreenYellow"
+                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>
+            <Entry Grid.Row="11" Grid.Column="1" x:Name="txtSalt" BackgroundColor="White"
+                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>
+            <Entry Grid.Row="11" Grid.Column="2" x:Name="txtCholesterol" BackgroundColor="White"
+                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>
+            <Entry Grid.Row="11" Grid.Column="3" x:Name="txtPotassium" BackgroundColor="White"
+                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>
+
+            <ListView Grid.ColumnSpan="12" x:Name="gridFoods" ItemsSource="{Binding}"
+                    ItemSelected="OnGridSelectionAsync" >
+                <!-- description of data to be shown, in a DataTemplate -->
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <ViewCell.View>
+                                <Grid Margin="10">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="18"/>
+                                    </Grid.RowDefinitions>
+                                    <Label HorizontalTextAlignment="Center" Grid.Column="0" Text="{Binding Name}"/>
+                                    <Label HorizontalTextAlignment="Center" Grid.Column="1" Text="{Binding Cho.Text}"/>
+                                </Grid>
+                            </ViewCell.View>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
